--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+.custom-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.custom-scrollbar {
+  scrollbar-width: none;
+}
